<resources>
    <string name="app_name">ScooterSharing</string>
    <string name="list_rides_button">List Rides</string>
    <string name="dialog_start_ride_message">Start this ride?</string>
    <string name="dialog_start_ride_yes">Yes</string>
    <string name="dialog_start_ride_no">No</string>
    <string name="sign_out">Sign out</string>
    <string name="email">Email</string>
    <string name="signup">Signup</string>
    <string name="password">Password</string>
    <string name="signin">SignIn</string>
    <string name="account">Account</string>
    <string name="scooters">Scooters</string>
    <string name="maps">Maps</string>
    <string name="email_error">Email is wrong</string>
    <string name="password_error">Password is wrong</string>
    <string name="location_event">LocationEvent</string>
    <string name="take_photo">Take photo</string>
    <string name="start_ride_event">StartRideEvent</string>
    <string name="end_ride_event">EndRideEvent</string>
    <string name="end_ride">End Ride</string>
    <string name="start_ride">Start Ride</string>
    <string name="name_error">Name cannot be empty</string>
    <string name="name">Name</string>
    <string name="start_nearest_ride">Start Nearest Ride</string>
</resources>